# spark-match-01-devops

./: .actionlint.yaml  .gitignore  .tracking-push-trigger  .yamllint.yml  LICENSE  README.md
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
.github/workflows/: actionlint.yml  angular-spa-deploy.yml  aws-lambda-invoke.yml  cfn-nag.yml  checkov.yml  ci.yml  codeql.yml  container-deploy-ecr.yml  eslint.yml  gitleaks.yml  lambda-permission-source-arn.yml  latex-build.yml  latex-release.yml  migrations-dry-run.yml  migrations.yml  node-test.yml  python-ci.yml  sam-deploy.yml  seed-users-advisors.yml  seed-users-agents.yml  seed-users-supervisors.yml  terraform-apply.yml  terraform-fmt.yml  terraform-plan.yml  terraform-validate.yml  tflint.yml  yamllint.yml
.github/workflows/deploy/: sam-deploy.yml
.github/workflows/ecosystem/: actionlint.yml  gitleaks.yml  yamllint.yml
.github/workflows/node/: eslint.yml
docs/: CACHE.md  PYTHON-CI.md  VERSIONING.md
governance/: bypasses.md
scripts/: README.md  apply-strict-rulesets.sh  check_lambda_permission_source_arn.py  configure-merge-methods.sh  configure-repo-rulesets.sh  create-pr.ps1  create-pr.sh  verify-rulesets.sh
tests/fixtures/python-project/: .gitignore  README.md  pyproject.toml
tests/fixtures/python-project/example/: calc.py  greet.py
tests/fixtures/python-project/tests/: test_calc.py  test_greet.py
