[project]
name = "example-fixture"
version = "0.1.0"
description = "Minimal Python fixture that dogfoods the spark-match-01-devops python-ci.yml recipe."
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy>=1.10",
]
lint = [
    "ruff>=0.6",
]
security = [
    "pip-audit>=2.7",
    "bandit>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["example"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["I"]  # isort
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=example",
    "--cov-report=xml:coverage.xml",
    "--cov-report=term-missing",
]
